methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean = False
  for (i<- 1 to 6){
    if (estSurBiscuit()){
      vuBiscuit = True
    }
    avance()
  }
  recule(6)
  return vuBiscuit
}